# catnap

./: .gitignore  CMakeLists.txt  Doxyfile  Readme.md  Readme.rst  conanfile.txt  make.py  shell.nix  techstack.md  techstack.yml
.github/workflows/: cmake.yml  nightly-cleanup.yml
cmake/: Findnlohmann_json.cmake
include/: CatNap.h  exceptions.h
kitten/: kitten.cpp
libcatnap/: CatNap.cpp  CatNap.h  Header.cpp  Header.h  HttpHandler.cpp  HttpHandler.h  HttpMethods.cpp  HttpMethods.h  RequestResponse.cpp  RequestResponse.h  Route.cpp  Route.h
libcatnap/private/: common.h
save/style/: style.css
test/: CatNap_test.cpp  Header_test.cpp  HttpMethods_test.cpp  RequestResponse_test.cpp  Route_test.cpp
tools/coverage/: NOTE  generate_coverage_report.py
